# os-downloader

./: .gitignore  .prettierrc.json  LICENSE  README.md  README_zh.md  bun.lockb  eslint.config.js  package.json  tsconfig.build.json  tsconfig.dev.json  tsconfig.json
.github/workflows/: publish.yml
lib/: index.d.ts  index.d.ts.map  index.js  os-detection.d.ts  os-detection.d.ts.map  os-detection.js  os-detection.test.d.ts  os-detection.test.d.ts.map  os-detection.test.js
src/: index.ts  os-detection.test.ts  os-detection.ts
src/type/: enum.ts  type.ts
src/wasm_project/: Cargo.toml
src/wasm_project/src/: lib.rs  main.rs
