[package]
name = "wasm_project"
version = "0.1.0"
edition = "2021"


[lib]
name = "os_detection_wasm"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
js-sys = "0.3.72"
sysinfo = "0.32.0"
wasm-bindgen = "0.2.95"
wasm-bindgen-cli = "0.2.95"
web-sys =  { version = "0.3.72", features = ["Window", "Document","console"] }



